fix(MENUPOC) vertical align of thirt menu item separator text

--- a/www/front_src/src/styles/partials/_side-nav.scss
+++ b/www/front_src/src/styles/partials/_side-nav.scss
@@ -740,7 +740,7 @@ a {
         background-color: $lightblue-centreon-primary;
         position: absolute;
         display: block;
-        top: 8px;
+        top: 9px;
       }
       span {
         font-family: $primary-font-regular;
@@ -750,6 +750,7 @@ a {
         font-variant: all-petite-caps;
         font-size: 0.7rem;
         position: relative;
+        line-height: 18px;
       }
     }
   }
